--- a/package.json
+++ b/package.json
@@ -9,29 +9,17 @@
     "@testing-library/user-event": "^13.5.0",
     "archiver": "^7.0.1",
     "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "canvas": "^2.11.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "i": "^0.3.7",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
-    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdf-poppler": "^0.2.1",
     "pdfkit": "^0.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "slugify": "^1.6.6",
-    "validator": "^13.11.0",
-    "vercel": "^37.5.2",
-    "web-vitals": "^2.1.4"
+    "vercel": "^37.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
